--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg2) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 29 Mar 2011 22:47:25 +0000
+
 rabbitmq-server (2.3.1-1sg0) unstable; urgency=low
 
   * SimpleGeo backport.
