--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg7) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 29 Mar 2011 23:22:32 +0000
+
 rabbitmq-server (2.3.1-1sg6) UNRELEASED; urgency=low
 
   * UNRELEASED
