--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg9) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 05 Apr 2011 23:07:09 +0000
+
 rabbitmq-server (2.3.1-1sg8) UNRELEASED; urgency=low
 
   [ Paul Lathrop ]
