--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg10) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Fri, 15 Apr 2011 21:05:56 +0000
+
 rabbitmq-server (2.3.1-1sg9) UNRELEASED; urgency=low
 
   * UNRELEASED
