--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg11) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Mon, 02 May 2011 23:46:21 +0000
+
 rabbitmq-server (2.3.1-1sg10) UNRELEASED; urgency=low
 
   * UNRELEASED
