--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg40) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Mon, 27 Jun 2011 00:27:01 +0000
+
 rabbitmq-server (2.3.1-1sg11) UNRELEASED; urgency=low
 
   * UNRELEASED
