--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg43) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Wed, 29 Jun 2011 22:32:57 +0000
+
 rabbitmq-server (2.3.1-1sg42) UNRELEASED; urgency=low
 
   * UNRELEASED
