--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg45) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Thu, 30 Jun 2011 19:21:24 +0000
+
 rabbitmq-server (2.3.1-1sg44) UNRELEASED; urgency=low
 
   * UNRELEASED
