--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg47) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Fri, 01 Jul 2011 23:44:33 +0000
+
 rabbitmq-server (2.3.1-1sg46) UNRELEASED; urgency=low
 
   * UNRELEASED
