--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg48) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 05 Jul 2011 20:58:44 +0000
+
 rabbitmq-server (2.3.1-1sg47) UNRELEASED; urgency=low
 
   * UNRELEASED
