--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (2.3.1-1sg49) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Sun, 17 Jul 2011 13:48:35 +0000
+
 rabbitmq-server (2.3.1-1sg48) UNRELEASED; urgency=low
 
   * UNRELEASED
